RESOLVED FIXED183792
SLEEP_THREAD_FOR_DEBUGGER should not use fancy number literals
https://bugs.webkit.org/show_bug.cgi?id=183792
Summary SLEEP_THREAD_FOR_DEBUGGER should not use fancy number literals
Blaze Burg
Reported 2018-03-20 12:46:23 PDT
The use of '1_s' doesn't work with ObjC++ files, at least with our current compiler settings. Just remove the _s part.
Attachments
Patch (1.16 KB, patch)
2018-03-20 12:48 PDT, Blaze Burg
no flags
Blaze Burg
Comment 1 2018-03-20 12:48:28 PDT
WebKit Commit Bot
Comment 2 2018-03-20 13:26:22 PDT
Comment on attachment 336141 [details] Patch Clearing flags on attachment: 336141 Committed r229770: <https://trac.webkit.org/changeset/229770>
WebKit Commit Bot
Comment 3 2018-03-20 13:26:23 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-03-20 13:27:20 PDT
Note You need to log in before you can comment on or make changes to this bug.