SLEEP_THREAD_FOR_DEBUGGER should not use fancy number literals https://bugs.webkit.org/show_bug.cgi?id=183792

Reviewed by Timothy Hatcher.

* wtf/DebugUtilities.h: Remove the '_s' since this won't
compile when included by files compiled as Objective-C++.


Canonical link: https://commits.webkit.org/199415@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229770 268f45cc-cd09-0410-ab3c-d52691b4dbfc